# openapi2mcpserver

./: .dockerignore  .env.example  Dockerfile  README-Docker.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  server.py  upload-to-dockerhub.bat
.cursor/rules/: openapi2mcp-project.mdc  quick-reference.mdc
.github/workflows/: docker-publish-simple.yml.example  docker-publish.yml
jewei_demo_mcp_server/: __init__.py  app_config.py  server.py
openapi2mcp/: app_config.py  core.py
openapi2mcpserver/: __init__.py  app_config.py
